--- a/src/main/webapp/WEB-INF/view/templates/shirtSizes.html
+++ b/src/main/webapp/WEB-INF/view/templates/shirtSizes.html
@@ -10,6 +10,7 @@
 <body>
 <div th:replace="fragments/navBar :: header(shirtSizes)"></div>
 <h1 class="list_title">Bolastærðir</h1>
+<div class="list_text">Smelltu <a href="#" th:href="@{/employeeList}">hér</a> til að fara til baka í starfsmannalista.</div>
 <table class="table" style="width: 30%;">
 			<thead class="list_thead">
 				<tr>
