sumbit yfir i stadfesta

--- a/src/main/webapp/WEB-INF/view/templates/shiftAllocation.html
+++ b/src/main/webapp/WEB-INF/view/templates/shiftAllocation.html
@@ -37,7 +37,7 @@
 						type="text" placeholder="Vaktaauðkenni" th:field="*{shiftId}" />
 				</div>
 
-				<input type="submit" class="registration_button" value="Submit" />
+				<input type="submit" class="registration_button" value="Staðfesta" />
 
 			</form>
 
