--- a/src/main/webapp/WEB-INF/view/templates/shiftRegistration.html
+++ b/src/main/webapp/WEB-INF/view/templates/shiftRegistration.html
@@ -93,7 +93,7 @@
 					</select>
 				</div>
 
-				<input type="submit" class="registration_button" value="Submit" />
+				<input type="submit" class="registration_button" value="Staðfesta" />
 
 			</form>
 
