--- a/src/main/webapp/WEB-INF/view/templates/employeeRegistration.html
+++ b/src/main/webapp/WEB-INF/view/templates/employeeRegistration.html
@@ -74,7 +74,7 @@
 				</select>
 			</div>
 
-			<input type="submit" class="registration_button" value="Submit" />
+			<input type="submit" class="registration_button" value="Staðfesta" />
 
 		</form>
 
