--- a/src/main/webapp/WEB-INF/view/templates/fragments/navBar.html
+++ b/src/main/webapp/WEB-INF/view/templates/fragments/navBar.html
@@ -49,6 +49,12 @@
 							class="fa fa-list-alt"></span>Vaktarúthlutunarlisti
 					</a>
 					</li>
+					<li
+						th:class="${activeTab== 'shiftSwitch'}? 'active' : 'inactive'">
+						<a href="#" th:href="@{/shiftSwitch}"> <span
+							class="fa fa-exchange"></span> Vaktaskipti
+					</a>
+					</li>
 				</ul>
 			</div>
 		</div>
