--- a/src/main/webapp/WEB-INF/view/templates/shiftConfirmation.html
+++ b/src/main/webapp/WEB-INF/view/templates/shiftConfirmation.html
@@ -2,22 +2,43 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
 
-<object th:include="fragments/bootstrapHead :: bootstrapHead" th:remove="tag" />
+<object th:include="fragments/bootstrapHead :: bootstrapHead"
+	th:remove="tag" />
 
-<link rel="stylesheet" href="/resources/styles/confirmation.css" />
+<link rel="stylesheet" href="/resources/statics/css/confirmation.css" />
 <div th:replace="fragments/navBar :: header(shiftRegistration)"></div>
 
 </head>
 <body>
-	
-	<h1>Skráning vaktarinnar:<span th:text="${shift.title}"/> tókst! </h1>
-	<h2>Skráðar upplýsingar</h2>
-	<h3>Titill: <span th:text="${shift.title}"/></h3>
-	<h3>Dagsetning: <span th:text="${shift.date}"/></h3>
-	<h3>Upphafstími: <span th:text="${shift.beginTime}"/></h3>
-	<h3>Lokatími:<span th:text="${shift.endTime}"/></h3>
-	<h3>Fjöldi starfsmanna: <span th:text="${shift.howMany}"/></h3>
-	<h3>Tegund vaktar: <span th:text="${shift.type}"/></h3>
 
+	<div class="shift_confirmation">
+		<div class="confirmation_wrapper">
+			<h1 class="confirmation_title">
+				Skráning vaktarinnar:<span th:text="${shift.title}" /> tókst!
+			</h1>
+			<h2 class="confirmation_subTitle">Skráðar upplýsingar</h2>
+			<h3 class="confirmation_text">
+				Titill: <span th:text="${shift.title}" />
+			</h3>
+			<h3 class="confirmation_text">
+				Vaktarauðkenni: <span th:text="${shift.id}" />
+			</h3>
+			<h3 class="confirmation_text">
+				Dagsetning: <span th:text="${shift.date}" />
+			</h3>
+			<h3 class="confirmation_text">
+				Upphafstími: <span th:text="${shift.beginTime}" />
+			</h3>
+			<h3 class="confirmation_text">
+				Lokatími:<span th:text="${shift.endTime}" />
+			</h3>
+			<h3 class="confirmation_text">
+				Fjöldi starfsmanna: <span th:text="${shift.howMany}" />
+			</h3>
+			<h3 class="confirmation_text">
+				Tegund vaktar: <span th:text="${shift.type}" />
+			</h3>
+		</div>
+	</div>
 </body>
 </html>
