--- a/src/main/webapp/WEB-INF/view/templates/employeeConfirmation.html
+++ b/src/main/webapp/WEB-INF/view/templates/employeeConfirmation.html
@@ -2,20 +2,40 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
 
-<object th:include="fragments/bootstrapHead :: bootstrapHead" th:remove="tag" />
+<object th:include="fragments/bootstrapHead :: bootstrapHead"
+	th:remove="tag" />
 
-<link rel="stylesheet" href="/resources/styles/confirmation.css" />
+<link rel="stylesheet" href="/resources/statics/css/confirmation.css" />
 <div th:replace="fragments/navBar :: header(employeeRegistration)"></div>
 
 </head>
 <body>
-	<h1>Takk fyrir skráninguna <span th:text="${employee.name}"/>.</h1>
-	<h2>Skráðar upplýsingar</h2>
-	<h3>Nafn: <span th:text="${employee.name}"/></h3>
-	<h3>Fæðingardagur:<span th:text="${employee.date}"/></h3>
-	<h3>Email: <span th:text="${employee.email}"/></h3>
-	<h3>Starfstitill: <span th:text="${employee.type}"/></h3>
-	<h3>Bolastærð: <span th:text="${employee.size}"/></h3>
-
+	<div class="employee_confirmation">
+		<div class="confirmation_wrapper">
+			<h1 class="confirmation_title">Takk fyrir skráninguna</h1>
+			<h1 class="confirmation_title">
+				<span th:text="${employee.name}" />!
+			</h1>
+			<h2 class="confirmation_subTitle">Skráðar upplýsingar</h2>
+			<h3 class="confirmation_text">
+				Nafn: <span th:text="${employee.name}" />
+			</h3>
+			<h3 class="confirmation_text">
+				Starfsmannaauðkenni: <span th:text="${employee.id}" />
+			</h3>
+			<h3 class="confirmation_text">
+				Fæðingardagur:<span th:text="${employee.date}" />
+			</h3>
+			<h3 class="confirmation_text">
+				Email: <span th:text="${employee.email}" />
+			</h3>
+			<h3 class="confirmation_text">
+				Starfstitill: <span th:text="${employee.type}" />
+			</h3>
+			<h3 class="confirmation_text">
+				Bolastærð: <span th:text="${employee.size}" />
+			</h3>
+		</div>
+	</div>
 </body>
 </html>
