--- a/src/main/webapp/WEB-INF/view/templates/fragments/navBar.html
+++ b/src/main/webapp/WEB-INF/view/templates/fragments/navBar.html
@@ -31,6 +31,11 @@
 							class="fa fa-pencil"></span> Vaktarúthlutun
 					</a>
 					</li>
+					<li th:class="${activeTab== 'shiftSwitch'}? 'active' : 'inactive'">
+						<a href="#" th:href="@{/shiftSwitch}"> <span
+							class="fa fa-exchange"></span> Vaktaskipti
+					</a>
+					</li>
 
 					<li th:class="${activeTab== 'allEmployees'}? 'active' : 'inactive'">
 						<a href="#" th:href="@{/employeeList}"> <span
@@ -47,12 +52,6 @@
 						th:class="${activeTab== 'allShiftAllocations'}? 'active' : 'inactive'">
 						<a href="#" th:href="@{/shiftAllocationView}"> <span
 							class="fa fa-list-alt"></span>Vaktarúthlutunarlisti
-					</a>
-					</li>
-					<li
-						th:class="${activeTab== 'shiftSwitch'}? 'active' : 'inactive'">
-						<a href="#" th:href="@{/shiftSwitch}"> <span
-							class="fa fa-exchange"></span> Vaktaskipti
 					</a>
 					</li>
 				</ul>
