--- a/src/main/webapp/resources/statics/css/confirmation.css
+++ b/src/main/webapp/resources/statics/css/confirmation.css
@@ -19,6 +19,16 @@
 	top: 0px;
 	left: 0px;
 }
+.shiftSwitch_confirmation {
+	background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+		url("../images/festival2.jpg") repeat center center fixed;;
+	background-size: cover;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	left: 0px;
+}
 
 .shiftAllocation_confirmation {
 	background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
@@ -38,7 +48,8 @@
 	padding: 10px 0;
 	margin-bottom: 10px;
 	color: #0098AE;
-	width: 380px;
+	margin-left: 5px;
+	margin-right: 5px;
 }
 
 .confirmation_wrapper {
@@ -47,6 +58,20 @@
 	margin: 100px auto;
 	padding: 20px 0 40px 0;
 	position: relative;
+}
+
+.confirmation_switch_wrapper {
+	width: 800px;
+	height: 700px;
+	background: rgba(0, 0, 0, 0.6);
+	margin: 100px auto;
+	padding: 20px 0 40px 0;
+	position: relative;
+}
+
+.confirmation_info{
+	width: 400px;
+	float:left;
 }
 
 .confirmation_subTitle {
