--- a/src/main/webapp/WEB-INF/view/templates/shiftSwitchConfirmation.html
+++ b/src/main/webapp/WEB-INF/view/templates/shiftSwitchConfirmation.html
@@ -24,12 +24,12 @@
 				<h3 class="confirmation_text">
 					Email: <span th:text="${emp1.email}" />
 				</h3>
-				<h2 class="confirmation_subTitle">Vakt fyrri starfsmanns</h2>
+				<h2 class="confirmation_subTitle">Er nú skráður á vaktina:</h2>
 				<h3 class="confirmation_text">
-					Titill: <span th:text="${shift1.title}" />
+					Titill: <span th:text="${shift2.title}" />
 				</h3>
 				<h3 class="confirmation_text">
-					Vaktarauðkenni: <span th:text="${shift1.id}" />
+					Vaktarauðkenni: <span th:text="${shift2.id}" />
 				</h3>
 			</div>
 			<div class="confirmation_info">
@@ -43,12 +43,12 @@
 				<h3 class="confirmation_text">
 					Email: <span th:text="${emp2.email}" />
 				</h3>
-				<h2 class="confirmation_subTitle">Vakt seinni starfsmanns</h2>
+				<h2 class="confirmation_subTitle">Er nú skráður á vaktina:</h2>
 				<h3 class="confirmation_text">
-					Titill: <span th:text="${shift2.title}" />
+					Titill: <span th:text="${shift1.title}" />
 				</h3>
 				<h3 class="confirmation_text">
-					Vaktarauðkenni: <span th:text="${shift2.id}" />
+					Vaktarauðkenni: <span th:text="${shift1.id}" />
 				</h3>
 			</div>
 		</div>
